grammar.txt
expr_list       : expr_list expr
                | expr

expr            : assign_expr EOS | EOL

________________________________________________________________________________________________

assign_expr     : bool_assign | num_assign | str_assign | array_assign

________________________________________________________________________________________________

bool_assign     : bool_var ASSIGN BOOL

bool_var        : SOUND | PGA_BIAS | GHOST_MODE | DISCO_MODE

________________________________________________________________________________________________

num_assign      : num_var ASSIGN NUM

num_var         : SPEED

________________________________________________________________________________________________

str_assign      : str_var ASSIGN STR

str_var         : K_KEY | OPENING_MSG | ENDING_MSG

________________________________________________________________________________________________

array_assign    : pieces_set | board_set | scoring_set

board_set       : DIMS ASSIGN OPEN_BRACKET number_list CLOSE_BRACKET

scoring_set     : SCORING ASSIGN OPEN_BRACKET number_list CLOSE_BRACKET

number_list     : number_list COMMA NUM | NUM

pieces_set      : PCS ASSIGN OPEN_BRACKET piece_list CLOSE_BRACKET

piece_list      : piece_list COMMA tuple | tuple

tuple           : OPEN_BRACKET STR COMMA COLOR CLOSE_BRACKET
